[package]
name = "turbo_exif"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.24", features = ["png", "jpeg", "gif"] }
png = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
little_exif = "0.6.2"
num = "0.4.3"

[lib]
crate-type = ["cdylib", "lib"]


[[bin]]
name = "turbo_exif"
path = "src/main.rs"
